# 2025-sapphire-rapids-ee

./: .gitignore  .gitmodules  .pylintrc  CITATION.cff  README.md  flake.nix
.github/workflows/: build-measurements.yml  latex.yml  mypy.yml  pylint.yml  shellcheck.yml
experiment_utils/: default.nix  experiments.py  pyproject.toml
experiment_utils/experiment_utils/: __init__.py  cstate.py  experiments.py  intel_frequency.py  isst_perf_profile_parser.py  plotting.py
experiment_utils/experiment_utils/elab/: __init__.py  elab.py  frequency.py
experiment_utils/experiment_utils/roco2_python/: README.md
measurements/: CMakeLists.txt  README.md
measurements/avx-frequency-license-bands/: Plot.ipynb  README.md  run.sh  sapphire_rapids_fixes.patch
measurements/avx-frequency-license-bands-without-isst/: Plot.ipynb  README.md  run.sh
measurements/avx-frequency-license-bands/parser/: isst_perf_profile_parser.py
measurements/avx-frequency-license-bands/results/: 2025-02-17.datafile
measurements/avx-frequency-uncore-anomaly/: Plot.ipynb  prepare.sh  run.sh
measurements/avx-turbo/: .gitignore  Plot.ipynb  README.md  hati_populate_sockets_alternating.patch
measurements/avx-turbo/parser/: avx_turbo_parser.py
measurements/core-layout/: cbo_find_event.sh  find_event.sbatch  find_event_hati  stream
measurements/core-power-regulators/: Plot.ipynb  run.sh
measurements/cstate-latencies/: README.md
measurements/cstate-latencies/analyze/: Plot.ipynb  analyze.ipynb
measurements/cstate-latencies/test/: .gitignore  cond_wait.c  measure.sh  prepare.sh  while_true.c
measurements/dump-msr/: dump-msr.sh  run.sh
measurements/dump-msr/results/: 2025-02-16.datafile  (+1 more)
measurements/frequency-bands/: run.sh
measurements/ftalat/: benchmark.sh  hati_analyze.ipynb
measurements/rapl-accuracy/: Plot.ipynb  run.sh
measurements/shared-frequency-domains/: README.md  run.sh  test_active.sh  test_idle.sh  while_true.c
measurements/software/: CMakeLists.txt  InstallFirestarter.cmake  InstallFirestarterMetricMetricq.cmake  InstallFtalat.cmake  InstallHwloc.cmake  InstallIntelSpeedSelect.cmake  InstallIntelUncoreFrequencyDumper.cmake  InstallLibnl3.cmake  InstallRobsize.cmake  InstallRoco2.cmake  InstallStream.cmake  IntelSpeedSelectSapphireRapids.patch  create_folder_and_run_test.sh
measurements/software/atomic-latencies/: CMakeLists.txt  LICENSE  README.md
measurements/software/atomic-latencies/src/: aarch64.c  latency.c  x86.c
measurements/software/avx-frequency-license-bands/: CMakeLists.txt  Plot.ipynb  README.md  run.sh
measurements/software/avx-frequency-license-bands-validation/: CMakeLists.txt  run.sh
measurements/software/avx-frequency-license-bands/parser/: __init__.py
measurements/software/cond-wait/: CMakeLists.txt  cond_wait.c
measurements/software/elab/: elab
measurements/software/rapl-update-intervals/: CMakeLists.txt  read_rapl_msr.c
measurements/software/shared-frequency-domains/: .gitignore  CMakeLists.txt  README.md  run.sh  test_active.sh  test_idle.sh
measurements/software/uncore-frequency-switching-latency/: CMakeLists.txt  latency_test.c
measurements/software/while-true/: CMakeLists.txt  while_true.c
measurements/tests/: CMakeLists.txt  create_folder_and_run_test.sh  functions.sh  reset_cpu.sh  test_wrapper.sh
measurements/tests/avx-frequency-license-bands/: CMakeLists.txt  Plot.ipynb
measurements/tests/avx-frequency-license-bands-validation/: CMakeLists.txt  Plot.ipynb  README.md  run.sh
measurements/tests/avx-frequency-license-bands-without-isst/: CMakeLists.txt  Plot.ipynb  README.md  run.sh
measurements/tests/avx-frequency-license-bands/parser/: __init__.py  isst_perf_profile_parser.py
measurements/tests/avx-frequency-uncore-anomaly/: CMakeLists.txt  Plot.ipynb  reboot.sh  run.sh
measurements/tests/core-layout/: CMakeLists.txt  Plot.ipynb  run.sh
measurements/tests/core-to-core-latency/: CMakeLists.txt  PlotAll.ipynb  core_to_core_latency.py  run.py  run.sh
measurements/tests/core-to-core-latency/benchmark/: __init__.py  numactl_parser.py
measurements/tests/core-to-core-latency/utils/: __init__.py  lscpu_parser.py  numactl_parser.py
measurements/tests/cstate-latencies/: CMakeLists.txt  Plot.ipynb  reboot.sh  run.sh
measurements/tests/cstate-latencies/plots/: Plot.ipynb
measurements/tests/dump-cpuid/: CMakeLists.txt  run.sh
measurements/tests/dump-msr/: CMakeLists.txt  dump-msr.sh  run.sh
measurements/tests/ftalat/: CMakeLists.txt  Plot.ipynb  ariel_analyze.ipynb  hati_analyze.ipynb  run.sh
measurements/tests/metricq-power-distribution/: CMakeLists.txt  Plot.ipynb  run.py
measurements/tests/rapl-accuracy/: .gitignore  CMakeLists.txt  Plot.ipynb  README.md  run.sh
measurements/tests/rapl-update-intervals/: CMakeLists.txt  Plot.ipynb  run.sh
measurements/tests/robsize/: CMakeLists.txt  Plot.ipynb  run.sh
measurements/tests/shared-frequency-domains/: CMakeLists.txt  run_active.sh  run_idle.sh  test_active.sh  test_idle.sh
measurements/tests/uncore-core-frequency-relationship/: CMakeLists.txt  README.md  run.sh
measurements/tests/uncore-frequency-switching-latency/: CMakeLists.txt  README.md  analyze.ipynb  run.sh
measurements/uncore-frequency-scaling/: README.md  alder_lake_ufs.patch
measurements/validate-avx-frequency-license-bands/: Plot.ipynb  run.sh
paper/: Makefile  paper.tex
python-packages/experiment_utils/: default.nix  pyproject.toml
python-packages/metricq/: add_protobuf_major_6.patch  default.nix
python-packages/mypy-protobuf/: README.md
thesis/: .gitignore  Makefile  main.tex
thesis/0_frontmatter/: 0_header.tex  1_title.tex  2_task.tex  4_abstract.tex  5_acronyms.tex
thesis/1_mainmatter/: 1_introduction.tex  2_background.tex  3_architectural_details.tex  4_power_measurement.tex  4_test_system_rapl.tex  5_power_management.tex  6_conclusion_and_future_work.tex  6_memory_hierarchy.tex  7_conclusion_and_future_work.tex  7_golden_cove.tex
thesis/2_bib/: 0_bibliography.tex  references.bib
thesis/3_appendix/: 0_appendix.tex
thesis/fig/: C_state_latencies.eps
(+13149 files in other folders)
