include(InstallLibnl3.cmake)
include(InstallIntelSpeedSelect.cmake)
include(InstallFirestarter.cmake)
include(InstallIntelUncoreFrequencyDumper.cmake)
include(InstallRoco2.cmake)
include(InstallFtalat.cmake)
include(InstallHwloc.cmake)
include(InstallFirestarterMetricMetricq.cmake)
include(InstallStream.cmake)

add_subdirectory(cond-wait)
add_subdirectory(uncore-frequency-switching-latency)
add_subdirectory(while-true)
