add_subdirectory(cond-wait)
add_subdirectory(uncore-frequency-switching-latency)
add_subdirectory(while-true)

include(InstallFirestarter.cmake)
include(InstallFirestarterMetricMetricq.cmake)
include(InstallFtalat.cmake)
include(InstallHwloc.cmake)
include(InstallIntelSpeedSelect.cmake)
include(InstallIntelUncoreFrequencyDumper.cmake)
include(InstallLibnl3.cmake)
include(InstallRoco2.cmake)
include(InstallStream.cmake)